# ames_project

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commit_history_anonym.txt  config.yaml  data_dict.md  environment.yaml  pyproject.toml
iowa_dream/: version.py
iowa_dream/_cleanfile/: cleaned_AmesHousing.csv  cleaned_AmesHousing.parquet
iowa_dream/config/: __init__.py  config.yaml  validation.py
iowa_dream/data/: cleaner.py  data_loader.py  loader.py  sample_split.py
iowa_dream/evaluation/: metrics_plot.py
iowa_dream/feature_engineering/: add_drop_features.py  add_features.py  categotical_transformer.py  lot_frontage_imputer.py  numerical_transformer.py
iowa_dream/integration_scripts/: evaluation.py  glm_pipeline.py  lgbm_pipeline.py  load_and_clean.py
iowa_dream/models/: custom_obj_lgbm.py  optuna_objective.py
iowa_dream/utils/: describer.py  inconsistency_check.py  plotting.py  plotting_EDA.py
notebooks/: early_eda.ipynb  eda_cleaning.ipynb  engineering_explorer.ipynb  evaluation.ipynb  model.ipynb
tests/: test_add_drop_features.py  test_add_feature.py  test_add_numeric_feature.py  test_add_ordinal_feature.py  test_categorical_transformer.py  test_drop_feature.py  test_lot_frontage_imputer.py  test_numeric_transformer.py  test_transform_numeric.py
